# smart-contract-analyst

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: 00_discovery.ipynb  01_ingestion.ipynb  02_vector_store.ipynb  03_rag.ipynb
src/api/: main.py  utils.py
src/ui/: app.py
tests/: test_extraction.py
