[project]
name = "smart-contract-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["ruff>=0.14.10"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:.*SwigPy.*",
    "ignore::DeprecationWarning:importlib.*",
    "ignore::DeprecationWarning:.*",
]
